// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageWallet has the expected html structure 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <h2>
            Wallet
          </h2>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                  </a>
                </div>
                <a
                  class="back"
                >
                  <i
                    class="material-icons"
                  >
                    arrow_back
                  </i>
                </a>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
                <a
                  class="sign-out"
                >
                  <i
                    class="material-icons"
                  >
                    exit_to_app
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main ps"
  >
    <modal-search
      type="balances"
    />
    <section
      class="ni-part"
    >
      <div
        class="ni-part-container"
      >
        <header
          class="ni-part-header"
        >
          <div
            class="ni-part-header-container"
          >
            <div
              class="ni-part-title h5"
            >
              Your Address
            </div>
            <menu
              class="ni-part-menu"
            />
          </div>
        </header>
        <main
          class="ni-part-main"
        >
          <div
            class="ni-li ni-li-receive proposal-enter proposal-enter-active"
          >
            <div
              class="ni-li-container"
            >
              <div
                class="ni-li-thumb"
              >
                <!---->
              </div>
              <div
                class="ni-li-label"
              >
                <div
                  class="ni-li-title"
                >
                  123abc456def
                </div>
                <div
                  class="ni-li-subtitle"
                >
                  
                </div>
              </div>
              <button
                class="ni-btn btn-receive"
              >
                <span
                  class="ni-btn__container ni-btn__icon-right ni-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn__icon material-icons"
                  >
                    file_download
                  </i>
                  <!---->
                  <span
                    class="ni-btn__value"
                  >
                    Receive
                  </span>
                </span>
              </button>
            </div>
          </div>
        </main>
      </div>
    </section>
    <section
      class="ni-part"
      id="part-available-balances"
    >
      <div
        class="ni-part-container"
      >
        <header
          class="ni-part-header"
        >
          <div
            class="ni-part-header-container"
          >
            <div
              class="ni-part-title h5"
            >
              Available Balances
            </div>
            <menu
              class="ni-part-menu"
            />
          </div>
        </header>
        <main
          class="ni-part-main"
        >
          <!---->
          <a
            class="ni-li ni-li-link ni-li-balance proposal-enter proposal-enter-active"
            href="#/wallet/send"
          >
            <div
              class="ni-li-container"
            >
              <div
                class="ni-li-thumb"
              >
                <!---->
              </div>
              <div
                class="ni-li-dl"
              >
                <div
                  class="ni-li-dt"
                >
                  FERMION
                </div>
                <div
                  class="ni-li-dd"
                >
                  456
                </div>
              </div>
              <button
                class="ni-btn"
              >
                <span
                  class="ni-btn__container ni-btn__icon-right ni-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn__icon material-icons"
                  >
                    chevron_right
                  </i>
                  <!---->
                  <span
                    class="ni-btn__value"
                  >
                    Send
                  </span>
                </span>
              </button>
            </div>
          </a>
          <a
            class="ni-li ni-li-link ni-li-balance proposal-enter proposal-enter-active"
            href="#/wallet/send"
          >
            <div
              class="ni-li-container"
            >
              <div
                class="ni-li-thumb"
              >
                <!---->
              </div>
              <div
                class="ni-li-dl"
              >
                <div
                  class="ni-li-dt"
                >
                  ATOM
                </div>
                <div
                  class="ni-li-dd"
                >
                  123
                </div>
              </div>
              <button
                class="ni-btn"
              >
                <span
                  class="ni-btn__container ni-btn__icon-right ni-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn__icon material-icons"
                  >
                    chevron_right
                  </i>
                  <!---->
                  <span
                    class="ni-btn__value"
                  >
                    Send
                  </span>
                </span>
              </button>
            </div>
          </a>
        </main>
      </div>
    </section>
    <section
      class="ni-part"
      id="part-staked-balances"
    >
      <div
        class="ni-part-container"
      >
        <header
          class="ni-part-header"
        >
          <div
            class="ni-part-header-container"
          >
            <div
              class="ni-part-title h5"
            >
              Staked Balances
            </div>
            <menu
              class="ni-part-menu"
            />
          </div>
        </header>
        <main
          class="ni-part-main"
        >
          <a
            class="ni-li ni-li-link"
            href="#/staking"
          >
            <div
              class="ni-li-container"
            >
              <div
                class="ni-li-thumb"
              >
                <!---->
              </div>
              <div
                class="ni-li-dl"
              >
                <div
                  class="ni-li-dt"
                >
                  FERMION
                </div>
                <div
                  class="ni-li-dd"
                >
                  123
                </div>
              </div>
              <button
                class="ni-btn"
              >
                <span
                  class="ni-btn__container ni-btn__icon-right ni-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn__icon material-icons"
                  >
                    chevron_right
                  </i>
                  <!---->
                  <span
                    class="ni-btn__value"
                  >
                    Stake
                  </span>
                </span>
              </button>
            </div>
          </a>
        </main>
      </div>
    </section>
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;

exports[`PageWallet should filter the balances 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <h2>
            Wallet
          </h2>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                  </a>
                </div>
                <a
                  class="back"
                >
                  <i
                    class="material-icons"
                  >
                    arrow_back
                  </i>
                </a>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
                <a
                  class="sign-out"
                >
                  <i
                    class="material-icons"
                  >
                    exit_to_app
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main ps"
  >
    <modal-search
      type="balances"
    />
    <section
      class="ni-part"
    >
      <div
        class="ni-part-container"
      >
        <header
          class="ni-part-header"
        >
          <div
            class="ni-part-header-container"
          >
            <div
              class="ni-part-title h5"
            >
              Your Address
            </div>
            <menu
              class="ni-part-menu"
            />
          </div>
        </header>
        <main
          class="ni-part-main"
        >
          <div
            class="ni-li ni-li-receive proposal-enter proposal-enter-active"
          >
            <div
              class="ni-li-container"
            >
              <div
                class="ni-li-thumb"
              >
                <!---->
              </div>
              <div
                class="ni-li-label"
              >
                <div
                  class="ni-li-title"
                >
                  123abc456def
                </div>
                <div
                  class="ni-li-subtitle"
                >
                  
                </div>
              </div>
              <button
                class="ni-btn btn-receive"
              >
                <span
                  class="ni-btn__container ni-btn__icon-right ni-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn__icon material-icons"
                  >
                    file_download
                  </i>
                  <!---->
                  <span
                    class="ni-btn__value"
                  >
                    Receive
                  </span>
                </span>
              </button>
            </div>
          </div>
        </main>
      </div>
    </section>
    <section
      class="ni-part"
      id="part-available-balances"
    >
      <div
        class="ni-part-container"
      >
        <header
          class="ni-part-header"
        >
          <div
            class="ni-part-header-container"
          >
            <div
              class="ni-part-title h5"
            >
              Available Balances
            </div>
            <menu
              class="ni-part-menu"
            />
          </div>
        </header>
        <main
          class="ni-part-main"
        >
          <!---->
          <a
            class="ni-li ni-li-link ni-li-balance proposal-leave proposal-leave-active"
            href="#/wallet/send"
          >
            <div
              class="ni-li-container"
            >
              <div
                class="ni-li-thumb"
              >
                <!---->
              </div>
              <div
                class="ni-li-dl"
              >
                <div
                  class="ni-li-dt"
                >
                  FERMION
                </div>
                <div
                  class="ni-li-dd"
                >
                  456
                </div>
              </div>
              <button
                class="ni-btn"
              >
                <span
                  class="ni-btn__container ni-btn__icon-right ni-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn__icon material-icons"
                  >
                    chevron_right
                  </i>
                  <!---->
                  <span
                    class="ni-btn__value"
                  >
                    Send
                  </span>
                </span>
              </button>
            </div>
          </a>
          <a
            class="ni-li ni-li-link ni-li-balance proposal-enter proposal-enter-active"
            href="#/wallet/send"
          >
            <div
              class="ni-li-container"
            >
              <div
                class="ni-li-thumb"
              >
                <!---->
              </div>
              <div
                class="ni-li-dl"
              >
                <div
                  class="ni-li-dt"
                >
                  ATOM
                </div>
                <div
                  class="ni-li-dd"
                >
                  123
                </div>
              </div>
              <button
                class="ni-btn"
              >
                <span
                  class="ni-btn__container ni-btn__icon-right ni-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn__icon material-icons"
                  >
                    chevron_right
                  </i>
                  <!---->
                  <span
                    class="ni-btn__value"
                  >
                    Send
                  </span>
                </span>
              </button>
            </div>
          </a>
        </main>
      </div>
    </section>
    <section
      class="ni-part"
      id="part-staked-balances"
    >
      <div
        class="ni-part-container"
      >
        <header
          class="ni-part-header"
        >
          <div
            class="ni-part-header-container"
          >
            <div
              class="ni-part-title h5"
            >
              Staked Balances
            </div>
            <menu
              class="ni-part-menu"
            />
          </div>
        </header>
        <main
          class="ni-part-main"
        >
          <a
            class="ni-li ni-li-link"
            href="#/staking"
          >
            <div
              class="ni-li-container"
            >
              <div
                class="ni-li-thumb"
              >
                <!---->
              </div>
              <div
                class="ni-li-dl"
              >
                <div
                  class="ni-li-dt"
                >
                  FERMION
                </div>
                <div
                  class="ni-li-dd"
                >
                  123
                </div>
              </div>
              <button
                class="ni-btn"
              >
                <span
                  class="ni-btn__container ni-btn__icon-right ni-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn__icon material-icons"
                  >
                    chevron_right
                  </i>
                  <!---->
                  <span
                    class="ni-btn__value"
                  >
                    Stake
                  </span>
                </span>
              </button>
            </div>
          </a>
        </main>
      </div>
    </section>
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;
